# Pick-and-Place-Robot-for-surgical-tools

./: Jacobian_matrix_validation.py  README.md  forward_kinematics_validation.py  symbolic_Jacobian_matrix_validation.py  symboplic_transformation_matrix_validation.py
SW assembly/: Camera.SLDPRT  elbow1.SLDPRT  elbow2.SLDPRT  elbow3.SLDPRT  elbow4.SLDPRT  elbow5.SLDPRT  elbow6.SLDPRT  surgical_robot.SLDASM  surgical_robot_base.SLDPRT
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: joint_command.py
src/surgical_robot/: CMakeLists.txt  package.xml
src/surgical_robot/config/: control.yaml
src/surgical_robot/launch/: debug.launch.py  display.launch.py  gazebo_launch.py
src/surgical_robot/meshes/: base_link.STL  camera_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/surgical_robot/model/greenbox/: model.config  model.sdf
src/surgical_robot/model/greenbox2/: model.config  model.sdf
src/surgical_robot/model/red_box/: model.sdf
src/surgical_robot/model/redbox/: model.config  model.sdf
src/surgical_robot/model/redbox2/: model.config  model.sdf
src/surgical_robot/urdf/: surgical_robot.csv  surgical_robot.urdf  surgical_robot.urdf.xacro
src/surgical_robot/worlds/: empty_world.world  project2_world.sdf
