<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>surgical_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aswin03@umd.edu">aswin03</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

 <build_depend>xacro</build_depend>

 <depend>gazebo_ros_pkgs</depend>
 <depend>gazebo_plugins</depend>
 <depend>robot_state_publisher</depend>
 <depend>tf2</depend>
 <depend>tf2_ros</depend>
  <depend>rclpy</depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
